# AutowareAuto

./: .gitignore  README.md  frames.gv
src/: PredictedObjectKinematics.idl
src/HesaiLidar_General_ROS/: CMakeLists.txt
src/HesaiLidar_General_ROS/launch/: hesai_lidar.launch  hesai_lidar_launch.py
src/common/lidar_utils/include/lidar_utils/: point_cloud_utils.hpp
src/common/lidar_utils/src/: point_cloud_utils.cpp
src/common/vehicle_constants_manager/: CMakeLists.txt
src/common/vehicle_constants_manager/include/vehicle_constants_manager/: vehicle_constants_manager.hpp
src/common/vehicle_constants_manager/src/: vehicle_constants_manager.cpp
src/control/controller_testing/launch/: controller_testing_node_pure_pursuit.launch.py
src/control/pure_pursuit/include/pure_pursuit/: pure_pursuit.hpp
src/control/pure_pursuit/src/: pure_pursuit.cpp
src/control/pure_pursuit_nodes/: CMakeLists.txt  package.xml
src/control/pure_pursuit_nodes/include/pure_pursuit_nodes/: pure_pursuit_node.hpp
src/control/pure_pursuit_nodes/launch/: pure_pursuit_nodes.launch.py
src/control/pure_pursuit_nodes/param/: pure_pursuit.param.yaml
src/control/pure_pursuit_nodes/src/: pure_pursuit_node.cpp
src/control/pure_pursuit_nodes/test/src/: debug.py  pure_pursuit_algorithm.by.py
src/drivers/HesaiLidar_General_ROS/src/: main_ros2.cc
src/drivers/eskf/: CMakeLists.txt  package.xml
src/drivers/eskf/design/: eskf-design.md
src/drivers/eskf/include/eskf/: eskf.h  eskf_node.hpp  gps_data.h  imu_data.h  odom_data.h  visibility_control.hpp
src/drivers/eskf/launch/: eskf.launch.py
src/drivers/eskf/records/: 1669780029.txt  1669780679.txt  1669780731.txt
src/drivers/eskf/scripts/: vis.py
src/drivers/eskf/src/: eskf.cpp  eskf_node.cpp
src/drivers/eskf/test/: test_eskf.cpp
src/drivers/gps/: package.xml  setup.py
src/drivers/gps/gps/: gps.py
src/drivers/imu_gps/: package.xml  setup.cfg  setup.py
src/drivers/imu_gps/imu_gps/: imu_gps.py
src/drivers/learning_tf2_cpp/: CMakeLists.txt  package.xml
src/drivers/learning_tf2_cpp/launch/: turtle_tf2_demo.launch.py
src/drivers/learning_tf2_cpp/src/: turtle_tf2_broadcaster.cpp
src/drivers/wheel_imu/: CMakeLists.txt  package.xml
src/drivers/wheel_imu/include/wheel_imu/: wheeltec_robot.h
src/drivers/wheel_imu/scripts/: sudo  wheeltec_udev.sh
src/drivers/wheel_imu/src/: Quaternion_Solution.cpp  wheeltec_robot.cpp
src/fusion/hungarian_assigner/src/: hungarian_assigner.cpp
src/launch/autoware_auto_launch/param/: behavior_planner.param.yaml  costmap_generator.param.yaml  freespace_planner.param.yaml  guide_dog_robot.param.yaml  lexus_rx_hybrid_2016.param.yaml
src/launch/autoware_demos/config/rviz2/: guide_dog_predict.rviz
src/launch/autoware_demos/launch/: gaode_api_global_planner.launch.py  guidedog_demo_rosbag.by.launch.py  guidedog_demo_rosbag.dst.launch.py  guidedog_demo_rosbag.launch.py  guidedog_planning_rosbag.launch.py  guidedog_predict_real.launch.py  guidedog_predict_rosbag.launch.py  guidedog_trajectory_follow.launch.py  lidar_bounding_boxes_real.launch.py  object_tracker_lidar_single_camera_real.launch.py  object_tracker_lidar_single_camera_with_prediction_real.launch.py
src/launch/autoware_demos/param/: behavior_planner.param.yaml  multi_object_tracker.param.yaml  prediction.param.yaml  vehicle_characteristics.param.yaml
src/perception/filters/point_cloud_filter_transform_nodes/param/: guide_dog_filter_transform.param.yaml  vlp16_sim_lexus_filter_transform.param.yaml
src/perception/filters/point_cloud_filter_transform_nodes/src/: point_cloud_filter_transform_node.cpp
src/perception/filters/point_cloud_filter_transform_nodes/test/: point_cloud_filter_transform_node_launch.test.py
src/perception/tracking/src/: multi_object_tracker.cpp  tracked_object.cpp
src/perception/tracking_nodes/src/: multi_object_tracker_node.cpp
src/planning/behavior_planner/: package.xml
src/planning/behavior_planner/src/: behavior_planner.cpp  trajectory_manager.cpp
src/planning/behavior_planner_nodes/: package.xml
src/planning/behavior_planner_nodes/src/: behavior_planner_node.cpp
src/planning/costmap_generator/: CMakeLists.txt  package.xml
src/planning/costmap_generator_nodes/: package.xml
src/planning/costmap_generator_nodes/launch/: costmap_generator_node.launch.py
src/planning/costmap_generator_nodes/test/: debug.py
src/planning/freespace_planner_nodes/: package.xml
src/planning/freespace_planner_nodes/launch/: freespace_planner.launch.py
src/planning/freespace_planner_nodes/test/: client.py  debug.test.py  debug2.py  server.py
src/planning/gaode_api_global_planner_nodes/: CMakeLists.txt  package.xml
src/planning/gaode_api_global_planner_nodes/include/gaode_api_global_planner_nodes/: gaode_api_global_planner_node.hpp  visibility_control.hpp
src/planning/gaode_api_global_planner_nodes/launch/: gaode_api_global_planner.launch.py
src/planning/gaode_api_global_planner_nodes/src/: gaode_api_global_planner_node.cpp
src/planning/gaode_api_global_planner_nodes/test/: gaode_api_global_planner_node_launch.test.py
src/planning/gaode_api_route_msgs/: CMakeLists.txt  package.xml
src/planning/gaode_api_route_msgs/msg/: GaodeApiRoute.msg
src/planning/global_path_mapping/: CMakeLists.txt  package.xml
src/planning/global_path_mapping/design/: global_path_mapping-design.md
src/planning/global_path_mapping/include/global_path_mapping/: global_path_mapping.hpp  global_path_mapping_node.hpp  visibility_control.hpp
src/planning/global_path_mapping/launch/: global_path_mapping.launch.py
src/planning/global_path_mapping/src/: global_path_mapping.cpp  global_path_mapping_node.cpp
src/planning/global_path_mapping/test/: test_global_path_mapping.cpp
src/planning/global_path_mapping_action/: CMakeLists.txt  package.xml
src/planning/global_path_mapping_action/action/: GlobalPathMappingAction.action
src/prediction/lonely_world_prediction/src/: init_from_tracked.cpp  lonely_world_prediction.cpp
src/urdf/lexus_rx_450h_description/urdf/: navi_car.urdf
(+20 files in other folders)
