<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>global_path_mapping</name>
  <version>1.0.0</version>
  <description>calculate start and end costmap point given global path and costmap</description>
  <maintainer email="dengsutao1996@buaa.edu.cn">dengsutao</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_auto_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>gaode_api_global_planner_nodes</depend>
  <depend>gaode_api_route_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>global_path_mapping_action</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
